[package]
name = "taken"
version = "0.1.1"
authors = ["Garrett Berg <vitiral@gmail.com>"]
description = "Macros for taking ownership, _staring Liam Neeson_"
documentation = "https://docs.rs/taken"
keywords = [
    "own",
    "ref",
    "clone",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/vitiral/taken"

[dependencies]
